# ansible-traefik

./: .bumpversion.cfg  .travis.yml  pyproject.toml  tox.ini
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: molecule.yml  playbook.yml  prepare.yml
molecule/default/tests/: test_default.py
tasks/: certificates.yml  docker.yml  main.yml
templates/: certificates.yml.j2  docker-compose.yml.j2  traefik.yml.j2
