[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ansible-traefik"
version = "0.0.0"
description = "Ansible role for Traefik"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ansible = "2.9.2"
docker = "4.1.0"
molecule = "2.22"
